--- a/app/src/main/res/layout/mylistitem.xml
+++ b/app/src/main/res/layout/mylistitem.xml
@@ -1,47 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="8dp"
+    app:contentPadding="10dp"
+    app:cardCornerRadius="10dp"
     >
 
-    <TextView
-        android:id="@+id/list_nameTV"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="horizontal"
+       >
 
-    <TextView
-        android:id="@+id/list_phoneTV"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+       <TextView
+           android:id="@+id/list_nameTV"
+           android:textSize="20sp"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/list_emailTV"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/list_adressTV"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+       <ImageView
+           android:id="@+id/list_imageView"
+           android:textSize="20sp"
+           android:layout_width="100dp"
+           android:layout_height="100dp"
+           android:paddingStart="10dp"
+           />
 
-    <TextView
-        android:id="@+id/list_webTV"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/list_imageView"
-        android:textSize="20sp"
-        android:layout_width="200dp"
-        android:layout_height="200dp" />
+   </LinearLayout>
 
 
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
