--- a/app/src/main/res/layout/mylistitem.xml
+++ b/app/src/main/res/layout/mylistitem.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardUseCompatPadding="true"
     app:cardElevation="8dp"
@@ -9,7 +9,7 @@
     app:cardCornerRadius="10dp"
     >
 
-   <LinearLayout
+   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
@@ -30,7 +30,7 @@
            android:paddingStart="10dp"
            />
 
-   </LinearLayout>
+   </RelativeLayout>
 
 
 
